--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,11 @@ jobs:
     env:
       # Edit here with the names of your latex file and directory (can use ".")
       DIR: .
-      FILE: cv
+      FILE: YogeshSingh-Resume
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
-      - name: cv
+      - name: YogeshSingh-Resume
         uses: dante-ev/latex-action@latest
         with:
           root_file: ${{ env.FILE }}
